@startuml

title __VIEW's Class Diagram__\n

  namespace View {
    class View.View {
        - board_jp : JPanel
        - ctr : int
        - full_attack : JLabel
        - grid : JButton[][]
        - iconSelected : boolean
        - info_jp : JPanel
        - playRules : JPanel
        - playerTurnJLabel : JLabel
        - red_army : JLabel
        - rules : JPanel
        - selected1 : JButton
        - selected1_i : int
        - selected1_j : int
        - selected2_i : int
        - selected2_j : int
        - statsJLabel : JLabel
        - statsJPanel : JPanel
        - statsJPanel1 : JPanel
        - statsJPanel2 : JPanel
        - statsJPanel3 : JPanel
        - statsLabJPanel : JPanel
        - successRateJLabel : JLabel
        - top : JLabel
        + View()
        + drawTheBoardPanel()
        + drawTheInfoPanel()
        + makeTheFrame()
        + setOpp()
        + update()
    }
  }
  

  namespace View {
    class View.View.CardListener {
        + mouseClicked()
        + mouseEntered()
        + mouseExited()
        + mousePressed()
        + mouseReleased()
    }
  }
  

  View.View -up-|> javax.swing.JFrame
  View.View o-- Controller.Controller : controller
  View.View +-down- View.View.CardListener
  View.View.CardListener .up.|> java.awt.event.MouseListener


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
